# c-function_pointers

./: CMakeLists.txt  README.md  as_function_parameter.c  as_function_parameter_typedef.c  as_function_parameter_typedef_args.c  as_struct_element.c  basic_syntax.c
2_syntax_typedef/: CMakeLists.txt
3_function_parameter/: CMakeLists.txt
4_function_parameter_typedef/: function_parameter_typedef2.c
5_struct_element/: CMakeLists.txt
6_struct_element_typedef/: struct_element_typedef.c  struct_element_typedef2.c
docs/: _config.yml  basic_syntax.md  examples.md  index.md  setup.md
function_parameter/: function_parameter.c
function_parameter_typedef/: CMakeLists.txt  function_parameter_typedef.c
struct_element/: struct_element.c
struct_element_typedef/: CMakeLists.txt
syntax/: CMakeLists.txt  syntax2.c
typedef_syntax/: typedef_syntax.c  typedef_syntax2.c
